# rok

./: .gitignore  Cargo.toml
config/targets/game/: game.cfg
crates/rok-abi/: Cargo.toml
crates/rok-abi/src/: lib.rs  task.rs
crates/rok-core/: Cargo.toml
crates/rok-dag/: Cargo.toml
crates/rok-dag/src/: job_node.rs
crates/rok-jobs/src/: job.rs  job_fence.rs  job_node.rs  job_node_graph.rs  job_node_handle.rs  job_node_pool.rs  job_pool.rs  job_priority.rs  job_record.rs  job_scheduler.rs  job_system.rs  job_worker.rs  job_worker_tls.rs  lib.rs  stop.rs
crates/rok-jobs/src/job_worker/: handle.rs  init.rs  local.rs  shared.rs  worker_loop.rs
engine/: Cargo.toml
engine/src/: engine.rs  lib.rs
lib/rok-engine/: Cargo.toml
lib/rok-engine/src/: lib.rs
libs/rok-abi/src/: engine_api.rs  frame.rs  host_api.rs  input.rs  io.rs  lib.rs  log.rs  surface.rs  target_api.rs  types.rs
libs/rok-core/: Cargo.toml
libs/rok-engine/: Cargo.toml
libs/rok-engine/src/: engine.rs  error.rs  frame.rs  lib.rs  target.rs
libs/rok-io/: Cargo.toml
libs/rok-io/src/: io_capabilities.rs  io_ring_linux.rs  lib.rs
libs/rok-io/src/io_ring_linux/: io_buffer.rs  mod.rs
libs/rok-io/src/io_ring_windows/: io_buffer.rs  ioring_api.rs  mod.rs
libs/rok-jobs/: Cargo.toml
libs/rok-jobs/src/: job.rs  job_fence.rs  job_pool.rs  job_record.rs  job_scheduler.rs  job_system.rs  join_handle.rs  tsc_timer.rs
libs/rok-jobs/src/job_worker/: handle.rs  local.rs  mod.rs  send_ptr.rs  worker_loop.rs
libs/rok-jobs/tests/: scheduler_integration.rs
libs/rok-log/: Cargo.toml
libs/rok-log/src/: file_sink.rs  lib.rs  logger.rs  sink.rs  stderr_sink.rs
libs/rok-math/: Cargo.toml
libs/rok-math/src/: vec3.rs
libs/rok-renderer/: Cargo.toml
libs/rok-renderer/src/: error.rs  lib.rs
libs/rok-renderer/src/backend/: device.rs  frame.rs  instance.rs  mod.rs  physical_device.rs  surface.rs  swapchain.rs
libs/rok-renderer/src/vk/: instance.rs  mod.rs
libs/rok-window/: Cargo.toml
libs/rok-window/src/: error.rs  lib.rs  wayland.rs  win32.rs
targets/rok-game/: Cargo.toml
targets/rok-game/src/: game.rs  lib.rs
