[workspace]
members = [
        "bin/rok-host",
        "engine",
        "libs/rok-abi",
        "libs/rok-core",
        "libs/rok-jobs",
        'libs/rok-log',
        "libs/rok-window",
        "libs/rok-io",
        "targets/rok-game",
]
resolver = "2"

# --- Workspace Inheritance ---
[workspace.package]
version = "0.1.0"
authors = ["Viktor Lindbäck"]
edition = "2024"

# --- Shared dependencies ---
[workspace.dependencies]
# Internal
rok-abi = { path = "libs/rok-abi" }
rok-core = { path = "libs/rok-core" }
rok-jobs = { path = "libs/rok-jobs" }
rok-log = { path = "libs/rok-log" }
rok-window = { path = "libs/rok-window" }
rok-io = { path = "libs/rok-io" }
# External
crossbeam = "0.8"
libloading = "0.8"
# Platform
windows-sys = { version = "0.61.1", features = [
        "Win32_Foundation",
        "Win32_UI_WindowsAndMessaging",
        "Win32_UI_HiDpi",
        "Win32_UI_Input",
        "Win32_Graphics_Gdi",
        "Win32_System_LibraryLoader",
        "Win32_System_IO",
] }

# --- Profiles ---
[profile.dev.package."*"]
opt-level = 3
