[workspace]
members = [
        "bin/rok-host",
        "libs/rok-abi",
        "libs/rok-core",
        "libs/rok-jobs",
        'libs/rok-log',
        "libs/rok-window",
        "libs/rok-io",
        "libs/rok-engine",
        "libs/rok-renderer",
        "targets/rok-game",
]
resolver = "2"

# --- Workspace Inheritance ---
[workspace.package]
version = "0.1.0"
authors = ["Viktor Lindbäck"]
edition = "2024"

# --- Shared dependencies ---
[workspace.dependencies]
# Internal
rok-abi = { path = "libs/rok-abi" }
rok-core = { path = "libs/rok-core" }
rok-jobs = { path = "libs/rok-jobs" }
rok-log = { path = "libs/rok-log" }
rok-window = { path = "libs/rok-window" }
rok-io = { path = "libs/rok-io" }
rok-engine = { path = "libs/rok-engine" }
rok-renderer = { path = "libs/rok-renderer" }
# External
crossbeam = "0.8"
libloading = "0.8"
ash = "0.38.0"
# Platform
windows-sys = { version = "0.61.1", features = [
        "Win32_Foundation",
        "Win32_UI_WindowsAndMessaging",
        "Win32_UI_HiDpi",
        "Win32_UI_Input",
        "Win32_Graphics_Gdi",
        "Win32_System_LibraryLoader",
        "Win32_System_IO",
        "Win32_System_Memory",
        "Win32_System_Threading",
        "Win32_Security",
] }

# --- Profiles ---
[profile.dev.package."*"]
opt-level = 3
